--- a/frontend/public/locales/ar.json
+++ b/frontend/public/locales/ar.json
@@ -1,51 +1,161 @@
 {
-  "dashboard": "لوحة التحكم",
-  "bookings": "الحجوزات",
-  "guests": "الضيوف",
-  "rooms": "الغرف",
-  "reports": "التقارير",
-  "marketing": "التسويق",
-  "suppliers": "الموردون",
-  "notifications": "الإشعارات",
-  "announcements": "الإعلانات الرسمية",
-  "settings": "الإعدادات",
-  "support": "الدعم",
-  "chat_ai": "دردشة الذكاء الاصطناعي",
-  "agent_hub": "مركز وكيل الذكاء الاصطناعي",
-  "login": "تسجيل الدخول",
-  "signup": "إنشاء حساب",
-  "email": "البريد الإلكتروني",
-  "password": "كلمة المرور",
-  "first_name": "الاسم الأول",
-  "last_name": "اسم العائلة",
-  "company": "الشركة",
-  "plan": "الخطة",
-  "confirm_password": "تأكيد كلمة المرور",
-  "submit": "إرسال",
-  "logout": "تسجيل الخروج",
-  "language": "اللغة",
-  "welcome": "مرحباً",
-  "no_data": "لا توجد بيانات",
-  "loading": "جارٍ التحميل...",
-  "error": "حدث خطأ",
-  "save": "حفظ",
-  "cancel": "إلغاء",
-  "delete": "حذف",
-  "edit": "تعديل",
-  "update": "تحديث",
-  "add": "إضافة",
-  "search": "بحث",
-  "actions": "الإجراءات",
-  "view": "عرض",
-  "send": "إرسال",
-  "confirm": "تأكيد",
-  "email_not_verified": "لم يتم التحقق من البريد الإلكتروني. تحقق من صندوق البريد.",
-  "invalid_credentials": "بيانات الدخول غير صحيحة أو المستخدم غير مسجل.",
-  "signup_success": "✅ تم التسجيل بنجاح! تحقق من بريدك الإلكتروني لتأكيد الحساب.",
-  "password_too_short": "يجب أن تحتوي كلمة المرور على 6 أحرف على الأقل.",
-  "passwords_do_not_match": "كلمتا المرور غير متطابقتين.",
-  "email_already_in_use": "هذا البريد الإلكتروني مسجل بالفعل.",
-  "signup_failed": "فشل في التسجيل. حاول مرة أخرى لاحقاً.",
-  "registering": "جاري التسجيل...",
-  "register": "سجل"
+  "login": {
+    "title": "تسجيل الدخول",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "button": "تسجيل الدخول",
+    "error": "بيانات الدخول غير صحيحة أو المستخدم غير مسجل.",
+    "email_not_verified": "لم يتم التحقق من البريد الإلكتروني. تحقق من صندوق البريد.",
+    "loading": "جارٍ تسجيل الدخول..."
+  },
+  "signup": {
+    "title": "إنشاء حساب",
+    "first_name": "الاسم الأول",
+    "last_name": "اسم العائلة",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "confirm_password": "تأكيد كلمة المرور",
+    "plan_base": "الخطة الأساسية",
+    "plan_gold": "الخطة الذهبية",
+    "company": "الشركة",
+    "button": "سجل",
+    "signup_loading": "جاري التسجيل...",
+    "signup_success": "✅ تم التسجيل بنجاح! تحقق من بريدك الإلكتروني لتأكيد الحساب.",
+    "password_too_short": "يجب أن تحتوي كلمة المرور على 6 أحرف على الأقل.",
+    "passwords_do_not_match": "كلمتا المرور غير متطابقتين.",
+    "email_already_in_use": "هذا البريد الإلكتروني مسجل بالفعل.",
+    "signup_failed": "فشل في التسجيل. حاول مرة أخرى لاحقاً."
+  },
+  "topbar": {
+    "welcome": "مرحباً",
+    "logout": "تسجيل الخروج"
+  },
+  "sidebar": {
+    "dashboard": "لوحة التحكم",
+    "bookings": "الحجوزات",
+    "guests": "الضيوف",
+    "rooms": "الغرف",
+    "reports": "التقارير",
+    "marketing": "التسويق",
+    "suppliers": "الموردون",
+    "notifications": "الإشعارات",
+    "officialAnnouncements": "الإعلانات الرسمية",
+    "settings": "الإعدادات",
+    "support": "الدعم",
+    "chatIA": "دردشة الذكاء الاصطناعي",
+    "agentHub": "مركز وكيل الذكاء الاصطناعي"
+  },
+  "dashboard": {
+    "title": "نظرة عامة على لوحة التحكم",
+    "bookings": "إجمالي الحجوزات",
+    "guests": "إجمالي الضيوف",
+    "revenue": "الإيرادات",
+    "reviews": "المراجعات",
+    "welcomeBack": "مرحباً بعودتك،",
+    "todayStats": "إحصائيات اليوم"
+  },
+  "bookings": {
+    "title": "الحجوزات",
+    "addBooking": "إضافة حجز",
+    "editBooking": "تعديل الحجز",
+    "deleteBooking": "حذف الحجز",
+    "checkIn": "تاريخ الوصول",
+    "checkOut": "تاريخ المغادرة",
+    "guestName": "اسم الضيف",
+    "room": "الغرفة",
+    "status": "الحالة",
+    "actions": "الإجراءات"
+  },
+  "guests": {
+    "title": "الضيوف",
+    "addGuest": "إضافة ضيف",
+    "editGuest": "تعديل الضيف",
+    "deleteGuest": "حذف الضيف",
+    "name": "الاسم الكامل",
+    "email": "البريد الإلكتروني",
+    "phone": "الهاتف",
+    "actions": "الإجراءات"
+  },
+  "rooms": {
+    "title": "الغرف",
+    "addRoom": "إضافة غرفة",
+    "editRoom": "تعديل الغرفة",
+    "deleteRoom": "حذف الغرفة",
+    "roomNumber": "رقم الغرفة",
+    "type": "النوع",
+    "price": "السعر",
+    "availability": "التوافر",
+    "actions": "الإجراءات"
+  },
+  "suppliers": {
+    "title": "الموردون",
+    "addSupplier": "إضافة مورد",
+    "editSupplier": "تعديل المورد",
+    "deleteSupplier": "حذف المورد",
+    "name": "اسم المورد",
+    "contact": "جهة الاتصال",
+    "email": "البريد الإلكتروني",
+    "phone": "الهاتف",
+    "category": "الفئة",
+    "actions": "الإجراءات"
+  },
+  "marketing": {
+    "title": "التسويق",
+    "campaigns": "الحملات",
+    "socialPosts": "منشورات التواصل الاجتماعي",
+    "budget": "الميزانية",
+    "target": "الهدف",
+    "platforms": "المنصات",
+    "createCampaign": "إنشاء حملة",
+    "optimizeWithAI": "تحسين باستخدام الذكاء الاصطناعي"
+  },
+  "reports": {
+    "title": "التقارير",
+    "bookings": "تقرير الحجوزات",
+    "financial": "التقرير المالي",
+    "general": "التقرير العام",
+    "suppliers": "تقرير الموردين",
+    "cleaning": "تقرير التنظيف",
+    "marketing": "تقرير التسويق",
+    "customers": "تقرير العملاء",
+    "aiInsights": "رؤى الذكاء الاصطناعي",
+    "export": "تصدير التقرير"
+  },
+  "notifications": {
+    "title": "الإشعارات",
+    "markAllRead": "وضع علامة مقروء للجميع",
+    "noNotifications": "لا توجد إشعارات"
+  },
+  "chatbox": {
+    "title": "دردشة الذكاء الاصطناعي",
+    "placeholder": "اكتب سؤالك...",
+    "send": "إرسال",
+    "thinking": "الذكاء الاصطناعي يفكر..."
+  },
+  "agentHub": {
+    "title": "مركز وكيل الذكاء الاصطناعي",
+    "overview": "نظرة عامة",
+    "actions": "إجراءات الذكاء الاصطناعي",
+    "documents": "المستندات المنشأة",
+    "settings": "إعدادات الأتمتة",
+    "autonomyLevel": "مستوى الاستقلالية",
+    "chatHistory": "سجل الدردشة",
+    "archived": "مؤرشف",
+    "delete": "حذف",
+    "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر؟"
+  },
+  "settings": {
+    "title": "الإعدادات",
+    "profile": "الملف الشخصي",
+    "preferences": "التفضيلات",
+    "security": "الأمان",
+    "structure": "إعدادات الهيكل",
+    "notifications": "إعدادات الإشعارات"
+  },
+  "support": {
+    "title": "الدعم",
+    "contact": "اتصل بالدعم",
+    "faq": "الأسئلة الشائعة",
+    "guides": "الأدلة والدروس"
+  }
 }
