--- a/frontend/public/locales/de.json
+++ b/frontend/public/locales/de.json
@@ -1,52 +1,161 @@
 {
-  "dashboard": "Dashboard",
-  "bookings": "Buchungen",
-  "guests": "Gäste",
-  "rooms": "Zimmer",
-  "reports": "Berichte",
-  "marketing": "Marketing",
-  "suppliers": "Lieferanten",
-  "notifications": "Benachrichtigungen",
-  "announcements": "Offizielle Mitteilungen",
-  "settings": "Einstellungen",
-  "support": "Support",
-  "chat_ai": "KI-Chat",
-  "agent_hub": "KI-Agenten HUB",
-  "login": "Anmelden",
-  "signup": "Registrieren",
-  "email": "E-Mail",
-  "password": "Passwort",
-  "first_name": "Vorname",
-  "last_name": "Nachname",
-  "company": "Firma",
-  "plan": "Tarif",
-  "confirm_password": "Passwort bestätigen",
-  "submit": "Absenden",
-  "logout": "Abmelden",
-  "language": "Sprache",
-  "welcome": "Willkommen",
-  "no_data": "Keine Daten verfügbar",
-  "loading": "Lädt...",
-  "error": "Ein Fehler ist aufgetreten",
-  "save": "Speichern",
-  "cancel": "Abbrechen",
-  "delete": "Löschen",
-  "edit": "Bearbeiten",
-  "update": "Aktualisieren",
-  "add": "Hinzufügen",
-  "search": "Suchen",
-  "actions": "Aktionen",
-  "view": "Ansehen",
-  "send": "Senden",
-  "confirm": "Bestätigen",
-  "email_not_verified": "E-Mail nicht verifiziert. Bitte überprüfen Sie Ihr Postfach.",
-  "invalid_credentials": "Ungültige Anmeldedaten oder Benutzer nicht registriert.",
-
-  "signup_success": "✅ Registrierung erfolgreich! Bitte überprüfe deine E-Mails, um dein Konto zu bestätigen.",
-  "password_too_short": "Das Passwort muss mindestens 6 Zeichen lang sein.",
-  "passwords_do_not_match": "Die Passwörter stimmen nicht überein.",
-  "email_already_in_use": "Diese E-Mail-Adresse ist bereits registriert.",
-  "signup_failed": "Registrierung fehlgeschlagen. Bitte versuche es später erneut.",
-  "registering": "Registrierung läuft...",
-  "register": "Registrieren"
+  "login": {
+    "title": "Anmelden",
+    "email": "E‑Mail",
+    "password": "Passwort",
+    "button": "Login",
+    "error": "Ungültige Anmeldedaten oder Benutzer nicht registriert.",
+    "email_not_verified": "E‑Mail nicht verifiziert. Bitte überprüfen Sie Ihr Postfach.",
+    "loading": "Anmeldung läuft..."
+  },
+  "signup": {
+    "title": "Registrieren",
+    "first_name": "Vorname",
+    "last_name": "Nachname",
+    "email": "E‑Mail",
+    "password": "Passwort",
+    "confirm_password": "Passwort bestätigen",
+    "plan_base": "Basis‑Tarif",
+    "plan_gold": "Gold‑Tarif",
+    "company": "Firma",
+    "button": "Registrieren",
+    "signup_loading": "Registrierung läuft...",
+    "signup_success": "✅ Registrierung erfolgreich! Bitte überprüfe deine E‑Mails, um dein Konto zu bestätigen.",
+    "password_too_short": "Das Passwort muss mindestens 6 Zeichen lang sein.",
+    "passwords_do_not_match": "Die Passwörter stimmen nicht überein.",
+    "email_already_in_use": "Diese E‑Mail-Adresse ist bereits registriert.",
+    "signup_failed": "Registrierung fehlgeschlagen. Bitte versuche es später erneut."
+  },
+  "topbar": {
+    "welcome": "Willkommen",
+    "logout": "Abmelden"
+  },
+  "sidebar": {
+    "dashboard": "Dashboard",
+    "bookings": "Buchungen",
+    "guests": "Gäste",
+    "rooms": "Zimmer",
+    "reports": "Berichte",
+    "marketing": "Marketing",
+    "suppliers": "Lieferanten",
+    "notifications": "Benachrichtigungen",
+    "officialAnnouncements": "Offizielle Mitteilungen",
+    "settings": "Einstellungen",
+    "support": "Support",
+    "chatIA": "KI-Chat",
+    "agentHub": "KI-Agenten HUB"
+  },
+  "dashboard": {
+    "title": "Dashboard Übersicht",
+    "bookings": "Gesamtbuchungen",
+    "guests": "Gesamtgäste",
+    "revenue": "Umsatz",
+    "reviews": "Bewertungen",
+    "welcomeBack": "Willkommen zurück,",
+    "todayStats": "Statistiken von heute"
+  },
+  "bookings": {
+    "title": "Buchungen",
+    "addBooking": "Buchung hinzufügen",
+    "editBooking": "Buchung bearbeiten",
+    "deleteBooking": "Buchung löschen",
+    "checkIn": "Check‑in Datum",
+    "checkOut": "Check‑out Datum",
+    "guestName": "Gastname",
+    "room": "Zimmer",
+    "status": "Status",
+    "actions": "Aktionen"
+  },
+  "guests": {
+    "title": "Gäste",
+    "addGuest": "Gast hinzufügen",
+    "editGuest": "Gast bearbeiten",
+    "deleteGuest": "Gast löschen",
+    "name": "Vollständiger Name",
+    "email": "E‑Mail",
+    "phone": "Telefon",
+    "actions": "Aktionen"
+  },
+  "rooms": {
+    "title": "Zimmer",
+    "addRoom": "Zimmer hinzufügen",
+    "editRoom": "Zimmer bearbeiten",
+    "deleteRoom": "Zimmer löschen",
+    "roomNumber": "Zimmernummer",
+    "type": "Typ",
+    "price": "Preis",
+    "availability": "Verfügbarkeit",
+    "actions": "Aktionen"
+  },
+  "suppliers": {
+    "title": "Lieferanten",
+    "addSupplier": "Lieferant hinzufügen",
+    "editSupplier": "Lieferant bearbeiten",
+    "deleteSupplier": "Lieferant löschen",
+    "name": "Lieferantenname",
+    "contact": "Kontakt",
+    "email": "E‑Mail",
+    "phone": "Telefon",
+    "category": "Kategorie",
+    "actions": "Aktionen"
+  },
+  "marketing": {
+    "title": "Marketing",
+    "campaigns": "Kampagnen",
+    "socialPosts": "Social‑Posts",
+    "budget": "Budget",
+    "target": "Zielgruppe",
+    "platforms": "Plattformen",
+    "createCampaign": "Kampagne erstellen",
+    "optimizeWithAI": "Mit KI optimieren"
+  },
+  "reports": {
+    "title": "Berichte",
+    "bookings": "Buchungsbericht",
+    "financial": "Finanzbericht",
+    "general": "Allgemeiner Bericht",
+    "suppliers": "Lieferantenbericht",
+    "cleaning": "Reinigungsbericht",
+    "marketing": "Marketingbericht",
+    "customers": "Kundenbericht",
+    "aiInsights": "KI‑Einblicke",
+    "export": "Bericht exportieren"
+  },
+  "notifications": {
+    "title": "Benachrichtigungen",
+    "markAllRead": "Alle als gelesen markieren",
+    "noNotifications": "Keine Benachrichtigungen"
+  },
+  "chatbox": {
+    "title": "KI-Chat",
+    "placeholder": "Ihre Frage eingeben...",
+    "send": "Senden",
+    "thinking": "KI denkt..."
+  },
+  "agentHub": {
+    "title": "KI-Agenten HUB",
+    "overview": "Übersicht",
+    "actions": "KI‑Aktionen",
+    "documents": "Generierte Dokumente",
+    "settings": "Automatisierungs‑Einstellungen",
+    "autonomyLevel": "Autonomiestufe",
+    "chatHistory": "Chat‑Verlauf",
+    "archived": "Archiviert",
+    "delete": "Löschen",
+    "confirmDelete": "Möchten Sie dieses Element wirklich löschen?"
+  },
+  "settings": {
+    "title": "Einstellungen",
+    "profile": "Profil",
+    "preferences": "Einstellungen",
+    "security": "Sicherheit",
+    "structure": "Struktureinstellungen",
+    "notifications": "Benachrichtigungseinstellungen"
+  },
+  "support": {
+    "title": "Support",
+    "contact": "Support kontaktieren",
+    "faq": "Häufige Fragen",
+    "guides": "Anleitungen & Tutorials"
+  }
 }
