--- a/frontend/public/locales/el.json
+++ b/frontend/public/locales/el.json
@@ -1,52 +1,161 @@
 {
-  "dashboard": "Πίνακας Ελέγχου",
-  "bookings": "Κρατήσεις",
-  "guests": "Επισκέπτες",
-  "rooms": "Δωμάτια",
-  "reports": "Αναφορές",
-  "marketing": "Μάρκετινγκ",
-  "suppliers": "Προμηθευτές",
-  "notifications": "Ειδοποιήσεις",
-  "announcements": "Επίσημες Ανακοινώσεις",
-  "settings": "Ρυθμίσεις",
-  "support": "Υποστήριξη",
-  "chat_ai": "Συνομιλία IA",
-  "agent_hub": "Κέντρο Πράκτορα IA",
-  "login": "Σύνδεση",
-  "signup": "Εγγραφή",
-  "email": "Ηλεκτρονικό Ταχυδρομείο",
-  "password": "Κωδικός Πρόσβασης",
-  "first_name": "Όνομα",
-  "last_name": "Επώνυμο",
-  "company": "Εταιρεία",
-  "plan": "Πρόγραμμα",
-  "confirm_password": "Επιβεβαίωση Κωδικού",
-  "submit": "Υποβολή",
-  "logout": "Αποσύνδεση",
-  "language": "Γλώσσα",
-  "welcome": "Καλώς ήρθατε",
-  "no_data": "Δεν υπάρχουν διαθέσιμα δεδομένα",
-  "loading": "Φόρτωση...",
-  "error": "Παρουσιάστηκε σφάλμα",
-  "save": "Αποθήκευση",
-  "cancel": "Ακύρωση",
-  "delete": "Διαγραφή",
-  "edit": "Επεξεργασία",
-  "update": "Ενημέρωση",
-  "add": "Προσθήκη",
-  "search": "Αναζήτηση",
-  "actions": "Ενέργειες",
-  "view": "Προβολή",
-  "send": "Αποστολή",
-  "confirm": "Επιβεβαίωση",
-  "email_not_verified": "Το email δεν έχει επιβεβαιωθεί. Ελέγξτε τα εισερχόμενά σας.",
-  "invalid_credentials": "Μη έγκυρα διαπιστευτήρια ή μη καταχωρημένος χρήστης.",
-
-  "signup_success": "✅ Η εγγραφή ολοκληρώθηκε με επιτυχία! Ελέγξτε το email σας για να επιβεβαιώσετε τον λογαριασμό.",
-  "password_too_short": "Ο κωδικός πρέπει να περιέχει τουλάχιστον 6 χαρακτήρες.",
-  "passwords_do_not_match": "Οι κωδικοί πρόσβασης δεν ταιριάζουν.",
-  "email_already_in_use": "Αυτό το email χρησιμοποιείται ήδη.",
-  "signup_failed": "Η εγγραφή απέτυχε. Δοκιμάστε ξανά αργότερα.",
-  "registering": "Γίνεται εγγραφή...",
-  "register": "Εγγραφή"
+  "login": {
+    "title": "Σύνδεση",
+    "email": "Ηλεκτρονικό Ταχυδρομείο",
+    "password": "Κωδικός Πρόσβασης",
+    "button": "Σύνδεση",
+    "error": "Μη έγκυρα διαπιστευτήρια ή μη καταχωρημένος χρήστης.",
+    "email_not_verified": "Το email δεν έχει επιβεβαιωθεί. Ελέγξτε τα εισερχόμενά σας.",
+    "loading": "Σύνδεση σε εξέλιξη..."
+  },
+  "signup": {
+    "title": "Εγγραφή",
+    "first_name": "Όνομα",
+    "last_name": "Επώνυμο",
+    "email": "Ηλεκτρονικό Ταχυδρομείο",
+    "password": "Κωδικός Πρόσβασης",
+    "confirm_password": "Επιβεβαίωση Κωδικού",
+    "plan_base": "Βασικό Πρόγραμμα",
+    "plan_gold": "Χρυσό Πρόγραμμα",
+    "company": "Εταιρεία",
+    "button": "Εγγραφή",
+    "signup_loading": "Γίνεται εγγραφή...",
+    "signup_success": "✅ Η εγγραφή ολοκληρώθηκε με επιτυχία! Ελέγξτε το email σας για να επιβεβαιώσετε τον λογαριασμό.",
+    "password_too_short": "Ο κωδικός πρέπει να περιέχει τουλάχιστον 6 χαρακτήρες.",
+    "passwords_do_not_match": "Οι κωδικοί πρόσβασης δεν ταιριάζουν.",
+    "email_already_in_use": "Αυτό το email χρησιμοποιείται ήδη.",
+    "signup_failed": "Η εγγραφή απέτυχε. Δοκιμάστε ξανά αργότερα."
+  },
+  "topbar": {
+    "welcome": "Καλώς ήρθατε",
+    "logout": "Αποσύνδεση"
+  },
+  "sidebar": {
+    "dashboard": "Πίνακας Ελέγχου",
+    "bookings": "Κρατήσεις",
+    "guests": "Επισκέπτες",
+    "rooms": "Δωμάτια",
+    "reports": "Αναφορές",
+    "marketing": "Μάρκετινγκ",
+    "suppliers": "Προμηθευτές",
+    "notifications": "Ειδοποιήσεις",
+    "officialAnnouncements": "Επίσημες Ανακοινώσεις",
+    "settings": "Ρυθμίσεις",
+    "support": "Υποστήριξη",
+    "chatIA": "Συνομιλία IA",
+    "agentHub": "Κέντρο Πράκτορα IA"
+  },
+  "dashboard": {
+    "title": "Πίνακας Ελέγχου",
+    "bookings": "Συνολικές Κρατήσεις",
+    "guests": "Συνολικοί Επισκέπτες",
+    "revenue": "Έσοδα",
+    "reviews": "Κριτικές",
+    "welcomeBack": "Καλώς ήρθατε ξανά,",
+    "todayStats": "Στατιστικά Σήμερα"
+  },
+  "bookings": {
+    "title": "Κρατήσεις",
+    "addBooking": "Προσθήκη Κράτησης",
+    "editBooking": "Επεξεργασία Κράτησης",
+    "deleteBooking": "Διαγραφή Κράτησης",
+    "checkIn": "Ημερομηνία Άφιξης",
+    "checkOut": "Ημερομηνία Αναχώρησης",
+    "guestName": "Όνομα Επισκέπτη",
+    "room": "Δωμάτιο",
+    "status": "Κατάσταση",
+    "actions": "Ενέργειες"
+  },
+  "guests": {
+    "title": "Επισκέπτες",
+    "addGuest": "Προσθήκη Επισκέπτη",
+    "editGuest": "Επεξεργασία Επισκέπτη",
+    "deleteGuest": "Διαγραφή Επισκέπτη",
+    "name": "Πλήρες Όνομα",
+    "email": "Ηλεκτρονικό Ταχυδρομείο",
+    "phone": "Τηλέφωνο",
+    "actions": "Ενέργειες"
+  },
+  "rooms": {
+    "title": "Δωμάτια",
+    "addRoom": "Προσθήκη Δωματίου",
+    "editRoom": "Επεξεργασία Δωματίου",
+    "deleteRoom": "Διαγραφή Δωματίου",
+    "roomNumber": "Αριθμός Δωματίου",
+    "type": "Τύπος",
+    "price": "Τιμή",
+    "availability": "Διαθεσιμότητα",
+    "actions": "Ενέργειες"
+  },
+  "suppliers": {
+    "title": "Προμηθευτές",
+    "addSupplier": "Προσθήκη Προμηθευτή",
+    "editSupplier": "Επεξεργασία Προμηθευτή",
+    "deleteSupplier": "Διαγραφή Προμηθευτή",
+    "name": "Όνομα Προμηθευτή",
+    "contact": "Επικοινωνία",
+    "email": "Ηλεκτρονικό Ταχυδρομείο",
+    "phone": "Τηλέφωνο",
+    "category": "Κατηγορία",
+    "actions": "Ενέργειες"
+  },
+  "marketing": {
+    "title": "Μάρκετινγκ",
+    "campaigns": "Καμπάνιες",
+    "socialPosts": "Δημοσιεύσεις Κοινωνικών Δικτύων",
+    "budget": "Προϋπολογισμός",
+    "target": "Στόχος",
+    "platforms": "Πλατφόρμες",
+    "createCampaign": "Δημιουργία Καμπάνιας",
+    "optimizeWithAI": "Βελτιστοποίηση με IA"
+  },
+  "reports": {
+    "title": "Αναφορές",
+    "bookings": "Αναφορά Κρατήσεων",
+    "financial": "Οικονομική Αναφορά",
+    "general": "Γενική Αναφορά",
+    "suppliers": "Αναφορά Προμηθευτών",
+    "cleaning": "Αναφορά Καθαρισμού",
+    "marketing": "Αναφορά Μάρκετινγκ",
+    "customers": "Αναφορά Πελατών",
+    "aiInsights": "Επισημάνσεις IA",
+    "export": "Εξαγωγή Αναφοράς"
+  },
+  "notifications": {
+    "title": "Ειδοποιήσεις",
+    "markAllRead": "Σήμανση Όλων ως Αναγνωσμένα",
+    "noNotifications": "Δεν υπάρχουν ειδοποιήσεις"
+  },
+  "chatbox": {
+    "title": "Συνομιλία IA",
+    "placeholder": "Πληκτρολογήστε την ερώτησή σας...",
+    "send": "Αποστολή",
+    "thinking": "Η IA επεξεργάζεται..."
+  },
+  "agentHub": {
+    "title": "Κέντρο Πράκτορα IA",
+    "overview": "Επισκόπηση",
+    "actions": "Ενέργειες IA",
+    "documents": "Δημιουργημένα Έγγραφα",
+    "settings": "Ρυθμίσεις Αυτοματοποίησης",
+    "autonomyLevel": "Επίπεδο Αυτονομίας",
+    "chatHistory": "Ιστορικό Συνομιλιών",
+    "archived": "Αρχειοθετημένο",
+    "delete": "Διαγραφή",
+    "confirmDelete": "Είστε βέβαιοι ότι θέλετε να διαγράψετε αυτό το στοιχείο;"
+  },
+  "settings": {
+    "title": "Ρυθμίσεις",
+    "profile": "Προφίλ",
+    "preferences": "Προτιμήσεις",
+    "security": "Ασφάλεια",
+    "structure": "Ρυθμίσεις Δομής",
+    "notifications": "Ρυθμίσεις Ειδοποιήσεων"
+  },
+  "support": {
+    "title": "Υποστήριξη",
+    "contact": "Επικοινωνία Υποστήριξης",
+    "faq": "Συχνές Ερωτήσεις",
+    "guides": "Οδηγοί & Tutorials"
+  }
 }
