--- a/frontend/public/locales/ko.json
+++ b/frontend/public/locales/ko.json
@@ -8,14 +8,21 @@
   },
   "signup": {
     "title": "계정 만들기",
-    "firstName": "이름",
-    "lastName": "성",
+    "first_name": "이름",
+    "last_name": "성",
     "email": "이메일",
     "password": "비밀번호",
-    "confirmPassword": "비밀번호 확인",
-    "plan": "플랜 선택",
+    "confirm_password": "비밀번호 확인",
+    "plan_base": "베이스 플랜",
+    "plan_gold": "골드 플랜",
     "company": "회사명",
-    "button": "가입하기"
+    "button": "가입하기",
+    "signup_loading": "가입 중…",
+    "signup_success": "✅ 가입이 완료되었습니다! 이메일을 확인하여 계정을 활성화하세요.",
+    "signup_failed": "가입에 실패했습니다. 나중에 다시 시도해주세요.",
+    "password_too_short": "비밀번호는 최소 6자 이상이어야 합니다.",
+    "passwords_do_not_match": "비밀번호가 일치하지 않습니다.",
+    "email_already_in_use": "이미 사용 중인 이메일입니다."
   },
   "topbar": {
     "welcome": "환영합니다",
@@ -30,11 +37,11 @@
     "marketing": "마케팅",
     "suppliers": "공급업체",
     "notifications": "알림",
-    "officialAnnouncements": "공식 공지",
+    "official_announcements": "공식 공지",
     "settings": "설정",
     "support": "지원",
-    "chatIA": "AI 채팅",
-    "agentHub": "AI 에이전트 허브"
+    "chat_ia": "AI 채팅",
+    "agent_hub": "AI 에이전트 허브"
   },
   "dashboard": {
     "title": "대시보드 개요",
@@ -42,26 +49,26 @@
     "guests": "총 게스트 수",
     "revenue": "수익",
     "reviews": "리뷰",
-    "welcomeBack": "다시 오신 것을 환영합니다,",
-    "todayStats": "오늘의 통계"
+    "welcome_back": "다시 오신 것을 환영합니다,",
+    "today_stats": "오늘의 통계"
   },
   "bookings": {
     "title": "예약",
-    "addBooking": "예약 추가",
-    "editBooking": "예약 수정",
-    "deleteBooking": "예약 삭제",
-    "checkIn": "체크인 날짜",
-    "checkOut": "체크아웃 날짜",
-    "guestName": "게스트 이름",
+    "add_booking": "예약 추가",
+    "edit_booking": "예약 수정",
+    "delete_booking": "예약 삭제",
+    "check_in": "체크인 날짜",
+    "check_out": "체크아웃 날짜",
+    "guest_name": "게스트 이름",
     "room": "객실",
     "status": "상태",
     "actions": "작업"
   },
   "guests": {
     "title": "게스트",
-    "addGuest": "게스트 추가",
-    "editGuest": "게스트 수정",
-    "deleteGuest": "게스트 삭제",
+    "add_guest": "게스트 추가",
+    "edit_guest": "게스트 수정",
+    "delete_guest": "게스트 삭제",
     "name": "전체 이름",
     "email": "이메일",
     "phone": "전화번호",
@@ -69,10 +76,10 @@
   },
   "rooms": {
     "title": "객실",
-    "addRoom": "객실 추가",
-    "editRoom": "객실 수정",
-    "deleteRoom": "객실 삭제",
-    "roomNumber": "객실 번호",
+    "add_room": "객실 추가",
+    "edit_room": "객실 수정",
+    "delete_room": "객실 삭제",
+    "room_number": "객실 번호",
     "type": "유형",
     "price": "가격",
     "availability": "이용 가능 여부",
@@ -80,9 +87,9 @@
   },
   "suppliers": {
     "title": "공급업체",
-    "addSupplier": "공급업체 추가",
-    "editSupplier": "공급업체 수정",
-    "deleteSupplier": "공급업체 삭제",
+    "add_supplier": "공급업체 추가",
+    "edit_supplier": "공급업체 수정",
+    "delete_supplier": "공급업체 삭제",
     "name": "공급업체 이름",
     "contact": "연락처",
     "email": "이메일",
@@ -93,12 +100,12 @@
   "marketing": {
     "title": "마케팅",
     "campaigns": "캠페인",
-    "socialPosts": "소셜 게시물",
+    "social_posts": "소셜 게시물",
     "budget": "예산",
     "target": "대상",
     "platforms": "플랫폼",
-    "createCampaign": "캠페인 생성",
-    "optimizeWithAI": "AI로 최적화"
+    "create_campaign": "캠페인 생성",
+    "optimize_with_ai": "AI로 최적화"
   },
   "reports": {
     "title": "보고서",
@@ -109,31 +116,31 @@
     "cleaning": "청소 보고서",
     "marketing": "마케팅 보고서",
     "customers": "고객 보고서",
-    "aiInsights": "AI 인사이트",
+    "ai_insights": "AI 인사이트",
     "export": "보고서 내보내기"
   },
   "notifications": {
     "title": "알림",
-    "markAllRead": "모두 읽음으로 표시",
-    "noNotifications": "알림이 없습니다"
+    "mark_all_read": "모두 읽음으로 표시",
+    "no_notifications": "알림이 없습니다"
   },
   "chatbox": {
     "title": "AI 채팅",
-    "placeholder": "질문을 입력하세요...",
+    "placeholder": "질문을 입력하세요…",
     "send": "보내기",
-    "thinking": "AI가 생각 중..."
+    "thinking": "AI가 생각 중…"
   },
-  "agentHub": {
+  "agent_hub": {
     "title": "AI 에이전트 허브",
     "overview": "개요",
     "actions": "AI 작업",
     "documents": "생성된 문서",
     "settings": "자동화 설정",
-    "autonomyLevel": "자율성 수준",
-    "chatHistory": "채팅 기록",
+    "autonomy_level": "자율성 수준",
+    "chat_history": "채팅 기록",
     "archived": "보관됨",
     "delete": "삭제",
-    "confirmDelete": "이 항목을 삭제하시겠습니까?"
+    "confirm_delete": "이 항목을 삭제하시겠습니까?"
   },
   "settings": {
     "title": "설정",
@@ -148,5 +155,25 @@
     "contact": "지원팀에 문의",
     "faq": "자주 묻는 질문",
     "guides": "가이드 및 튜토리얼"
+  },
+  "common": {
+    "submit": "제출",
+    "logout": "로그아웃",
+    "language": "언어",
+    "welcome": "환영합니다",
+    "no_data": "데이터가 없습니다",
+    "loading": "로드 중…",
+    "error": "오류가 발생했습니다",
+    "save": "저장",
+    "cancel": "취소",
+    "delete": "삭제",
+    "edit": "편집",
+    "update": "업데이트",
+    "add": "추가",
+    "search": "검색",
+    "actions": "작업",
+    "view": "보기",
+    "send": "보내기",
+    "confirm": "확인"
   }
 }
